--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1002,7 +1002,7 @@ section.upcoming-meetings .categories .main-button-red a {
 
 .meeting-item .down-content h4 {
   font-size: 18px;
-  color: #1f272b;
+  color: #000000;
   font-weight: 600;
   display: inline-block;
   margin-bottom: 15px;
@@ -1010,8 +1010,8 @@ section.upcoming-meetings .categories .main-button-red a {
 
 .meeting-item .down-content p {
   margin-left: 50px;
-  color: #1f272b;
-  font-size: 14px;
+  color: #272c2f;
+  font-size: 20px;
 }
 
 
