--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -65,6 +65,7 @@ html[xmlns] .clearfix {
   height: 1%;
 }
 
+
 ul, li {
   padding: 0;
   margin: 0;
@@ -893,7 +894,7 @@ section.upcoming-meetings {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 230px;
+  
   padding-bottom: 110px;
 }
 
@@ -1330,7 +1331,7 @@ section.contact-us {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 140px 0px 0px 0px;
+ padding-bottom: 100px;
 }
 
 section.contact-us #contact {
